# advent_2024

./: README.md  pyproject.toml
src/advent_2024/: main.py
src/advent_2024/day1/: __init__.py  day1_core.py
src/advent_2024/day2/: __init__.py  day2_core.py
src/advent_2024/day3/: __init__.py  day3_core.py
src/advent_2024/day4/: __init__.py  cls_Wordsearch.py  day4_core.py
test/unit/day1/: test_day1.py
test/unit/day2/: test_day2.py
test/unit/day3/: test_day3.py
test/unit/day4/: test_day4.py
